idea/static/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  min-height: 100vh;
  overflow-x: hidden;
}

.bg-ptx {
  background-image: url("https://images.pexels.com/photos/3374210/pexels-photo-3374210.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.bg-login {
  background-color: hsl(0, 5%, 4%);
  background-image: linear-gradient(
      -45deg,
      transparent 75%,
      hsl(0, 0%, 3.5%) 75%
    ),
    linear-gradient(45deg, transparent 75%, hsl(0, 0%, 3.5%) 75%),
    linear-gradient(-135deg, transparent 75%, hsl(0, 0%, 3.5%) 75%),
    linear-gradient(135deg, transparent 75%, hsl(0, 0%, 3.5%) 75%);
  background-size: 4rem 4rem;
  background-position: 4rem 0, 1rem 0, 0 1rem, 0 0;
}

.bg-index {
  background-image: url("https://images.pexels.com/photos/3214110/pexels-photo-3214110.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.navigation {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  z-index: 100;
}

.navigation img,
.git-link {
  width: 40px;
  height: 40px;
}

.navigation .links {
  color: rgb(255, 255, 255);
  background: transparent;
  width: 100px;
  text-decoration: none;
  margin: 10px;
  font-weight: normal;
}

.navigation .git-link {
  margin: 5px;
}

.modal-login {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1000; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
}

/* Modal Content */
.modal-content {
  position: relative;
  margin: auto;
  padding: 20px;
  width: 80%;
  background: #080808;
  opacity: 0.95;
}

/* The Close Button */
.close {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 10px;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

.header {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

#text {
  position: absolute;
  font-size: 5em;
  color: #fff;
  text-shadow: 8px 8px 5px rgb(6, 23, 106);
  z-index: 2;
}

.header #pic2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100vh;
  pointer-events: none;
}

.header #pic1 {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  height: 100vh;
  pointer-events: none;
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  width: 100%;
}

.form-box,
.index-form-box {
  position: relative;
  width: 400px;
  height: 450px;
  background: transparent;
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 0 0 30px rgb(6, 23, 106);
  border-radius: 20px;
  backdrop-filter: blur(15px);
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-index {
  display: flex;
  flex-direction: column;
}

.form-index button {
  align-self: center;
  margin-top: 15px;
}

.form-index input {
  align-self: center;
  width: fit-content;
}

.form2-cont,
.stats-cont,
.rating {
  color: white;
}

.stats-cont {
  width: 90%;
  margin: auto auto;
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 0 0 30px rgb(6, 23, 106);
  backdrop-filter: blur(15px);
  margin-bottom: 20px;
  margin-top: 20px;
  border-radius: 10px;
  padding: 10px;
}

.stats-cont:hover {
  box-shadow: 0 0 20px white; /* Increase the shadow size on hover */
}

.stats-info {
  padding: 10px;
}

.form2-cont {
  display: flex;
  justify-content: center;
  margin-top: 5rem;
}

.input-field {
  color: black;
  background-color: white;
  opacity: 0.8;
}

#message,
#existing_note,
.highlight-note {
  color: black;
}

.dropdown {
  color: black;
}

.form-group-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 10px;
}

.form-group {
  margin-bottom: 10px;
}

.form-group label {
  margin-bottom: 5px;
}

/* need to figure out how to get the general rating label to go above the select box */

.form-group-label,
.form-group-select,
.other-form-group-title,
.form-group label {
  display: flex;
  flex: 100%;
  justify-content: center;
  margin-bottom: 15px;
}

.response-container {
  color: white;
}

.form3-textarea-cont,
.form3-highlight-cont {
  display: flex;
  width: 50%;
  justify-content: center;
  flex-direction: column;
  margin: auto auto;
  padding: 15px;
}

.form3-textarea-cont {
  border-bottom: 2px solid white;
}

.form3-textarea-cont textarea,
.form3-highlight-cont select {
  width: 70%;
  margin: 15px auto 15px auto;
}

.form3-textarea-cont button,
.form3-highlight-cont button {
  margin: auto auto;
  margin-top: 15px;
}

.dropdown,
.form4-btn,
.read-more-btn,
.delete-btn,
.highlight-select,
.highlight-btn,
.add-note-btn,
.btn-show-more,
.close-dialog-btn {
  margin-block: 15px;
  background-color: #fff;
  border: 1px solid #d5d9d9;
  border-radius: 8px;
  box-shadow: rgba(213, 217, 217, 0.5) 0 2px 5px 0;
  box-sizing: border-box;
  color: black;
  cursor: pointer;
  display: inline-block;
  font-size: 13px;
  line-height: 29px;
  padding: 0 10px 0 11px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
}

.read-more-btn:hover {
  text-decoration: none;
  color: black;
}

.read-more-btn {
  text-decoration: none;
  color: black;
}

.dropdown:hover {
  background-color: #f7fafa;
}
/* ... */

